[package]
name = "image-handler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio="1.15.0"
serde="1.0.132"
serde_json="1.0"
uuid = { version = "0.8", features = ["v4"] }
toml = "0.5"
infer = "0.3"
actix-web = "4.0.0-beta.15"
reqwest="0.11.8"