[package]
name = "imageserver"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde="1.0.132"
serde_json="1.0"
uuid = { version = "0.8", features = ["v4"] }
toml = "0.5"
infer = "0.5"
futures-util = "0.3.19"
actix-multipart = "0.3.0"
actix-web = "3.3.3"
reqwest="0.11.8"